[zhijin_flutter_server][Update]Update server_state Page
1、完成 MVVM 架构重构
2、完成 json 配置文件读取与序列化功能
3、完成异步加载重构

--- a/Code/zhijin_flutter_server/pubspec.yaml
+++ b/Code/zhijin_flutter_server/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   beamer: ^1.5.3
+  dio: ^5.1.1
+  dio_http2_adapter: ^2.2.0
   # webf: ^0.14.0-beta.8+2
   # webf_websocket: ^1.2.0
 
