[zhijin_flutter_server][Update]Update server_state Page
1. 更新 cos 对象存储远程下载功能
2. 更新 MVVM 开发结构，计划重构调整部分代码

--- a/Code/zhijin_flutter_server/pubspec.yaml
+++ b/Code/zhijin_flutter_server/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  ffi: ^2.0.2
+  path: ^1.8.2
   beamer: ^1.5.3
   dio: ^5.1.1
   dio_http2_adapter: ^2.2.0
