[zhijin_flutter_server][Feature]Data Analysis Page
1. 完成 分布式编译管理 - 数据分析 页面的框架开发
2. 引入 dart package: Graphic 作为可视化图表开发组件

--- a/Code/zhijin_flutter_server/zhijin_config.json
+++ b/Code/zhijin_flutter_server/zhijin_config.json
@@ -56,6 +56,15 @@
       }
     ]
   },
+  "tasksManageModule": {
+    "moduleConfig": {
+      "comment": [
+        "1. 此处填写该 json 段配置注释。",
+        "2. 待填写"
+      ]
+    },
+    "data": []
+  },
   "remoteCosModule": {
     "comment": [
       "1. SecretId: secret_id 替换为用户的 SecretId，建议使用子账号密钥，授权遵循最小权限指引，降低使用风险。",
