--- a/Code/zhijin_flutter_server/pubspec.yaml
+++ b/Code/zhijin_flutter_server/pubspec.yaml
@@ -34,11 +34,13 @@ dependencies:
     sdk: flutter
   ffi: ^2.0.2
   path: ^1.8.2
+  intl: ^0.17.0
   beamer: ^1.5.3
   dio: ^5.1.1
   dio_http2_adapter: ^2.2.0
   # webf: ^0.14.0-beta.8+2
   # webf_websocket: ^1.2.0
+  graphic: ^2.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
