--- a/Code/ZhiJinCompiler/3rdparty/AutoBuild/requirements.txt
+++ b/Code/ZhiJinCompiler/3rdparty/AutoBuild/requirements.txt
@@ -14,11 +14,14 @@ charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 decorator==5.1.1
+dnspython==2.3.0
+eventlet==0.33.3
 exceptiongroup==1.1.1
 executing==1.2.0
 Flask==2.3.2
 Flask-SocketIO==5.3.4
 frozenlist==1.3.3
+greenlet==2.0.2
 h11==0.14.0
 idna==3.4
 ipython==8.13.1
@@ -55,6 +58,7 @@ trio-websocket==0.10.2
 urllib3==1.26.15
 watchdog==3.0.0
 wcwidth==0.2.6
+websocket-client==1.5.1
 Werkzeug==2.3.4
 wsproto==1.2.0
 yarl==1.9.2
